--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
     grid-template-columns: 2fr 1fr;
     gap: 15px;
     align-items: flex-start;
-    padding: 5px 5%;
+    padding: 5px 2%;
 }
 
 .container .main-video {
@@ -123,7 +123,17 @@ html {
 
 @media (max-width: 768px) {
     .container {
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .container .main-video {
+        height: 100%;
+    }
+
+    .container .video-list {
+        width: 100%;
     }
 }
 
