--- a/style.css
+++ b/style.css
@@ -36,13 +36,14 @@ html {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    height: 100%;
+    /*     height: 100%;     */
+    border-radius: 5px;
 }
 
 .container .main-video video {
     width: 100%;
     border-radius: 5px;
-    height: 100%;
+    /*     height: 100%;     */
 }
 
 .container .main-video .title {
